@@ -1,3 +1,7 @@
+2007-12-04 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/gen/proxy/proxybase.py: add mediapath get
+	* src/gen/proxy/dbbase.py: add mediapath methods
+
 2007-12-03  Douglas S.Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/CalculateEstimatedDates.py: Refinements, use results tab
 	* src/PluginUtils/_PluginWindows.py: Tool support for a results tab
